--- a/App/Home/templates/Home/home.html
+++ b/App/Home/templates/Home/home.html
@@ -9,7 +9,7 @@
     <!-- HEADER -->
     <section class="mb-40">
 
-        <nav class="navbar navbar-expand-lg shadow-md py-2 bg-white relative flex items-center w-full justify-between">
+        <nav class="navbar navbar-expand-lg drop-shadow-lg py-2 bg-white relative flex items-center w-full justify-between">
           <div class="px-6 w-full flex flex-wrap items-center justify-between">
             <div class="flex items-center">
                  <!--LOGO-->
@@ -30,8 +30,8 @@
     
         <div class="container mx-auto px-6 md:px-12 xl:px-32">
           <div class="text-center text-gray-800">
-            <div class="block rounded-lg shadow-lg px-3 py-12 md:py-16 md:px-12" style="margin-top: -170px; background: hsla(0, 0%, 100%, 0.7); backdrop-filter: blur(50px);">
-              <h1 class="text-5xl md:text-6xl xl:text-7xl font-bold tracking-tight mb-12">The best in <span class="text-blue-600">town</span></h1>
+            <div class="block rounded-lg shadow-lg px-3 py-12 md:py-16 md:px-12" style="margin-top: 50px; background: hsla(0, 0%, 100%, 0.7); backdrop-filter: blur(50px);">
+              <h1 class="text-5xl md:text-6xl xl:text-7xl font-bold tracking-tight mb-12">Expert Care, <span class="text-blue-600">Trusted Results</span></h1>
               <a href="login/" class="inline-block px-7 py-3 mb-2 md:mb-0 mr-0 md:mr-2 bg-blue-600 text-white font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out" data-mdb-ripple="true" data-mdb-ripple-color="light" href="#!" role="button">Reserve</a>
             </div>
           </div>
