--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% load tailwind_tags %}
 <!doctype html>
 <html lang="en">
@@ -5,6 +6,9 @@
   
 
   <meta charset="utf-8">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="{% static 'Home/css/style.css' %}">
   <title>{% block title %}{% endblock title %} | MyClinic</title>
   {% tailwind_css %} 
   {% block scripts %}{% endblock scripts %}
@@ -32,4 +36,7 @@
 
     
 </body>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </html>
