--- a/Home/templates/Home/home.html
+++ b/Home/templates/Home/home.html
@@ -39,93 +39,133 @@
       </section>
     <!-- HEADER END -->
   
-    <!-- DOCTORS TEAM --> 
-     <!-- Container for demo purpose -->
+<!-- DOCTORS TEAM -->
 <div class="container my-24 px-6 mx-auto">
-
-    <!-- Section: Design Block -->
-    <section class="mb-32 text-gray-800 text-center">
-      <h2 class="text-3xl font-bold mb-32">Meet the doctors </h2>
-  
+  <section class="mb-32 text-gray-800 text-center">
+      <h2 class="text-3xl font-bold mb-12">Meet the Doctors</h2>
       <div class="grid gap-x-6 lg:gap-x-12 md:grid-cols-2">
-        <div class="mb-24 md:mb-0">
-          <div class="rounded-lg shadow-lg h-full block bg-white">
-            <div class="flex justify-center">
-              <div class="flex justify-center" style="margin-top: -75px">
-                <img src="https://i.ibb.co/YD280Vk/doctor2.jpg" class="rounded-full mx-auto shadow-lg" alt=""
-                  style="width: 150px" />
+          <div class="mb-24 md:mb-0">
+              <div class="rounded-lg shadow-lg h-full block bg-white">
+                  <div class="flex justify-center">
+                      <div class="flex justify-center" style="margin-top: -75px">
+                          <img src="https://i.ibb.co/YD280Vk/doctor2.jpg" class="rounded-full mx-auto shadow-lg" alt="Doctor Ubalda Lorenzo" style="width: 150px" />
+                      </div>
+                  </div>
+                  <div class="p-6">
+                      <h5 class="text-lg font-bold mb-4">Ubalda Lorenzo</h5>
+                      <p class="mb-2">MBBS, MD - Cardiology</p>
+                      <p class="mb-2">Specializes in cardiovascular diseases and interventional cardiology.</p>
+                      <p class="italic">"Committed to providing the highest quality of care to improve the heart health of our patients."</p>
+                  </div>
               </div>
-            </div>
-            <div class="p-6">
-              <h5 class="text-lg font-bold mb-4">Ubalda Lorenzo</h5>
-              <p class="mb-6">Doctor</p>
-              <ul class="list-inside flex mx-auto justify-center">
-                <a href="#!" class="px-2">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512" class="w-4 h-4 text-blue-600">
-                    <path fill="currentColor"
-                      d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z" />
-                  </svg>
-                </a>
-                <a href="#!" class="px-2">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-4 h-4 text-blue-600">
-                    <path fill="currentColor"
-                      d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z" />
-                  </svg>
-                </a>
-                <a href="#!" class="px-2">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-4 h-4 text-blue-600">
-                    <path fill="currentColor"
-                      d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z" />
-                  </svg>
-                </a>
-              </ul>
-            </div>
           </div>
-        </div>
-  
-        <div class="mb-24 md:mb-0">
-          <div class="rounded-lg shadow-lg h-full block bg-white">
-            <div class="flex justify-center">
-              <div class="flex justify-center" style="margin-top: -75px">
-                <img src="https://i.ibb.co/HqJsbrk/doctor1.jpg" class="rounded-full mx-auto shadow-lg" alt=""
-                  style="width: 150px" />
+          <div class="mb-24 md:mb-0">
+              <div class="rounded-lg shadow-lg h-full block bg-white">
+                  <div class="flex justify-center">
+                      <div class="flex justify-center" style="margin-top: -75px">
+                          <img src="https://i.ibb.co/HqJsbrk/doctor1.jpg" class="rounded-full mx-auto shadow-lg" alt="Doctor Kai Vrtek" style="width: 150px" />
+                      </div>
+                  </div>
+                  <div class="p-6">
+                      <h5 class="text-lg font-bold mb-4">Kai Vrtek</h5>
+                      <p class="mb-2">MBBS, MS - Orthopedic Surgery</p>
+                      <p class="mb-2">Specializes in joint replacement, sports injuries, and orthopedic trauma.</p>
+                      <p class="italic">"Dedicated to restoring mobility and enhancing the quality of life for our patients."</p>
+                  </div>
               </div>
-            </div>
-            <div class="p-6">
-              <h5 class="text-lg font-bold mb-4">Kai Vrtek</h5>
-              <p class="mb-6">Doctor</p>
-              <ul class="list-inside flex mx-auto justify-center">
-                <a href="#!" class="px-2">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" class="w-4 h-4 text-blue-600">
-                    <path fill="currentColor"
-                      d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z" />
-                  </svg>
-                </a>
-                <a href="#!" class="px-2">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-4 h-4 text-blue-600">
-                    <path fill="currentColor"
-                      d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z" />
-                  </svg>
-                </a>
-                <a href="#!" class="px-2">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-4 h-4 text-blue-600">
-                    <path fill="currentColor"
-                      d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z" />
-                  </svg>
-                </a>
-              </ul>
-            </div>
           </div>
-        </div>
-  
-      
       </div>
-    </section>
-    <!-- Section: Design Block -->
-  
-  </div>
-  <!-- Container for demo purpose -->
-    <!--DOCTORS TEAM END--> 
+  </section>
+</div>
+<!-- DOCTORS TEAM END -->
+
+<!-- HOSPITAL DESCRIPTION -->
+<div class="container my-24 px-6 mx-auto">
+  <section class="mb-32 text-gray-800 text-center">
+      <h2 class="text-3xl font-bold mb-12">About Mother Teresa Hospital</h2>
+      <div id="hospitalCarousel" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner border rounded-lg shadow-lg">
+              <div class="carousel-item active text-center">
+                  <img src="{% static 'Home/images/img2.png' %}" class="d-block mx-auto img-fluid rounded-lg" style="max-height: 300px; transform: scale(0.7)" alt="Modern Facilities">
+                  <div class="p-4">
+                      <h3 class="text-2xl font-bold mb-2">Modern Facilities</h3>
+                      <p class="text-xl text-blue-500">Equipped with the latest medical technology to provide advanced diagnostics and treatments.</p>
+                  </div>
+              </div>
+              <div class="carousel-item text-center">
+                  <img src="{% static 'Home/images/img2.png' %}" class="d-block mx-auto img-fluid rounded-lg" style="max-height: 300px; transform: scale(0.7);" alt="Experienced Staff">
+                  <div class="p-4">
+                      <h3 class="text-2xl font-bold mb-2">Experienced Staff</h3>
+                      <p class="text-xl text-blue-500">Our team of doctors, nurses, and support staff are highly trained and experienced in their respective fields.</p>
+                  </div>
+              </div>
+              <div class="carousel-item text-center">
+                  <img src="{% static 'Home/images/img3.png' %}" class="d-block mx-auto img-fluid rounded-lg" style="max-height: 300px;" alt="Comprehensive Care">
+                  <div class="p-4">
+                      <h3 class="text-2xl font-bold mb-2">Comprehensive Care</h3>
+                      <p class="text-xl text-blue-500">From preventive care to complex surgeries, we offer a wide range of medical services to meet all healthcare needs.</p>
+                  </div>
+              </div>
+          </div>
+          <a class="carousel-control-prev" href="#hospitalCarousel" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon bg-blue-400 rounded-none p-2" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#hospitalCarousel" role="button" data-slide="next">
+              <span class="carousel-control-next-icon bg-blue-400 rounded-none p-2" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+          </a>
+      </div>
+  </section>
+</div>
+<!-- HOSPITAL DESCRIPTION END -->
+
+
+<!-- PATIENT TESTIMONIALS -->
+<div class="container my-24 px-6 mx-auto">
+  <section class="mb-32 text-gray-800 text-center">
+      <h2 class="text-3xl font-bold mb-12">Patient Testimonials</h2>
+      <div id="testimonialCarousel" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner border rounded-lg shadow-lg">
+              <div class="carousel-item active">
+                  <div class="p-4">
+                      <img src="{% static 'Home/images/user.png' %}" class="rounded-full mx-auto mb-5" style="width: 120px; height: 120px;" alt="John Doe">
+                      <p class="text-sm font-bold text-blue-500 mb-4">"The care I received at Mother Teresa Hospital was outstanding. The doctors and nurses were very attentive and professional."</p>
+                      <h5 class="text-lg font-bold mb-1">John Doe</h5>
+                      <p class="text-sm  text-gray-500">Patient</p>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="p-4">
+                      <img src="{% static 'Home/images/user.png' %}" class="rounded-full mx-auto mb-5" style="width: 120px; height: 120px;" alt="Jane Smith">
+                      <p class="text-sm font-bold text-blue-500 mb-4">"I am very grateful for the excellent treatment and facilities at Mother Teresa Hospital. They made my recovery a lot easier."</p>
+                      <h5 class="text-lg font-bold mb-1">Jane Smith</h5>
+                      <p class="text-sm text-gray-500">Patient</p>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="p-4">
+                      <img src="{% static 'Home/images/user.png' %}" class="rounded-full mx-auto mb-5" style="width: 120px; height: 120px;" alt="Emily Johnson">
+                      <p class="text-sm font-bold text-blue-500 mb-4">"Mother Teresa Hospital offers the best medical services. The staff is compassionate and highly skilled."</p>
+                      <h5 class="text-lg font-bold mb-1">Emily Johnson</h5>
+                      <p class="text-sm text-gray-500">Patient</p>
+                  </div>
+              </div>
+          </div>
+          <a class="carousel-control-prev" href="#testimonialCarousel" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon bg-blue-400 rounded-none p-2" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#testimonialCarousel" role="button" data-slide="next">
+              <span class="carousel-control-next-icon bg-blue-400 rounded-none p-2" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+          </a>
+      </div>
+  </section>
+</div>
+<!-- PATIENT TESTIMONIALS END -->
+
+<!-- PATIENT TESTIMONIALS END -->
 
 
 <!--CONTACT US MAP--> 
@@ -265,7 +305,7 @@
   </div>
 
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2021 Copyright: MyClinic
+    © 2024 Copyright: MyClinic
   </div>
 </footer>
 
